# learn-rust

./: README.md
Rust-in-Action/ch01/ch01-fruit/: Cargo.toml
Rust-in-Action/ch01/ch01-letters/: Cargo.toml
Rust-in-Action/ch01/ch01-penguins/: docs.md
Rust-in-Action/ch02/: 3arrays.rs  add-with-lifetimes.rs  bufreader-lines.rs  docs.md  first-steps.rs  intro-tonumbers.rs  introducing-vec.rs  match-needles.rs  needle-in-haystack.rs  non-base2.rs  ok  read-file.rs  simple-with-enumerate.rs  simple-with-linenums.rs  str-simple-pattern.rs  while-true-incr-count.rs
Rust-in-Action/ch02/complex/: Cargo.toml
Rust-in-Action/ch03/: mock-file.rs  newtype-pattern.rs  not-quote-file-2.rs  notquite-file-1.rs  parse-log.rs  skeleton-read-trait.rs
Rust-in-Action/ch04/: check-sats-1.rs  check-sats-2.rs  check-sats-3.rs  check-sats-clone-and-copy-traits.rs  rc-refcell-groundstation.rs  sat-mailbox.rs  short-lived-strategy.rs
Rust-in-Action/ch05/: bit-patterns.rs  endianness.rs  f32-as-u32.rs  impossible-add.rs  int-vs-int.rs  to-oblivion.rs  u8-to-mock-rand.rs  visualizing-f32.rs
Rust-in-Action/ch06/: 6-2.rs  6-4.rs  6-5.rs  6-6.rs  pointer-intro.rs
Rust-in-Action/ch07/actionkv1/: Cargo.toml  misc.val
Rust-in-Action/ch07/actionkv1/src/: akv_mem.rs  lib.rs
aoj/: Cargo.toml  README.md
aoj/src/: dsl-1a.rs  dsl-2c.rs
hello2/src/: main.rs
minidb/: Cargo.toml  README.md
minidb/examples/: btree-all.rs  btree-create.rs  btree-query.rs
minidb/src/: btree.rs  buffer copy.rs  buffer.rs  disk copy.rs  disk.rs  lib.rs  main.rs  memcmpable.rs  query.rs  tuple.rs
(+47 files in other folders)
