[package]
name = "actionkv1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc = "3.0.0"
crc32fast = "1.3.2"
serde = "1.0.152"
serde_derive = "1.0.152"

# 構築するライブラリの名前を定義。１つのクレートが持てるライブラリの数は１つ.
[lib]
name = "libactionkv"
path = "src/lib.rs"

# [[bin]]はいくつも置くことができる。このクレートから構築される１この実行ファイルを定義する。
[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"
